--- a/index.html
+++ b/index.html
@@ -13,6 +13,25 @@
 </head>
 
 <body>
+	<header>
+		<div class="menu-header">
+			
+			<div class="left">
+			   <img src="./img (6)/img/logo-small.png" alt="">
+			   <a href="#">perche</a>
+			   <a href="#">perche</a>
+			   <a href="#">perche</a>
+		    </div>
+		  <div class="right">
+			<a href="#">perche</a>
+			<a href="#">perche</a>
+			<a href="#">perche</a>
+			<button>inizia</button>
+		  </div>
+		</div>
+		
+	</header>
+	<main></main>
 
 </body>
 
