--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Document</title>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 	<link rel="stylesheet" href="./css/reset.css">
 	<link rel="stylesheet" href="./css/utils.css">
 	<link rel="stylesheet" href="./css/style.css">
@@ -205,6 +205,26 @@
 		   </div>
 		     <div>  <button>clicca qui</button> </div>
 		   
+		</div>
+		<div class="nineth-main">
+			<div>
+				<h3 id="nove">Domande frequenti</h3>
+			</div>
+			<div>
+			  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, accusamus doloremque quos quis nisi ipsam?</p>
+			  <hr>
+		    </div>
+			
+			<div>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, accusamus doloremque quos quis nisi ipsam?</p>
+				<hr>
+			  </div>
+			
+			  <div>
+				<p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Error, accusamus doloremque quos quis nisi ipsam?</p>
+				<hr>
+			  </div>
+			  
 		</div>
 		
 		
