--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						<li><i class="fa-brands fa-font-awesome"></i>hahah</li>
 						<li><i class="fa-solid fa-share-nodes"></i>gagagga</li>
 
-						<button>sgssggs</button>
+						<button>prova gratis per 30 giorni</button>
                         
 						<p>oppure <a href="#">acquista ora</a></p>
 						punti salienti del piano
@@ -93,7 +93,7 @@
 						</li>
 						<li><i class="fa-brands fa-font-awesome"></i>hahah</li>
 						<li><i class="fa-solid fa-share-nodes"></i>gagagga</li>
-						<button>sgssggs</button>
+						<button>prova gratis per 30 giorni</button>
 						<p>oppure <a href="#">acquista ora</a></p>
 						punti salienti del piano
 						<li>&check; invia file fino a 100 gb</li>
@@ -111,7 +111,7 @@
 						<li><i class="fa-regular fa-user"> </i>hshhdhd</li>
 						<li><i class="fa-brands fa-font-awesome"> </i>hahah</li>
 						<li><i class="fa-solid fa-share-nodes"></i>gagagga</li>
-						<button>sgssggs</button>
+						<button>prova gratis per 30 giorni</button>
 						<p>oppure <a href="#">acquista ora</a></p>
 						punti salienti del piano
 						<li>&check; invia file fino a 100 gb</li>
